# openapi.yaml
@@ -6,6 +6,8 @@ info:
 servers:
   - url: http://localhost:3000
 tags:
+  - name: Auth
+    description: Auth management
   - name: Users
     description: User management
   - name: Categories
@@ -20,11 +22,47 @@ tags:
     description: Cart management
   - name: AdminLogs
     description: Admin log management
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 paths:
+  /auth/login:
+    post:
+      summary: Đăng nhập
+      tags: [Auth]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        "200":
+          description: Đăng nhập thành công, trả về JWT token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+        "401":
+          description: Sai tài khoản hoặc mật khẩu
+
   /users:
     get:
       summary: Lấy tất cả user
       tags: [Users]
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: Danh sách user
