# routes/authRoute.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const AuthController = require('../controllers/authController');
+
+// Route đăng nhập
+router.post('/login', AuthController.login);
+
+module.exports = router;
